Fix row and card spacing, bump version to 1.1.1

--- a/less/_cards.less
+++ b/less/_cards.less
@@ -3,6 +3,8 @@
 /**
 * Cards are used to create area separation on the main stage of the app.
 *
+* Make sure to use cards inside the grid for proper spacing around.
+*
 * @section Cards
 */
 
@@ -29,7 +31,6 @@
 .card {
   background-color: white;
   box-shadow: 0 1px 1px 0 @clr-shadow;
-  margin-bottom: 1em;
   min-height: 4em;
   width: 100%;
 }
